third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/unrelated_panic.stderr
error: proc macro panicked
 --> tests/ui/unrelated_panic.rs:3:1
  |
3 | unrelated_panic!();
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: message: unrelated panic test
