third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/unrelated_panic.rs
use test_crate::*;

unrelated_panic!();

fn main() {}
